@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -37,8 +38,19 @@ android {
         jvmTarget = '17'
     }
 }
+kapt {
+    javacOptions {
+        option("-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
+    }
+}
+
 
 dependencies {
+        implementation( "androidx.room:room-runtime:2.6.1")
+        kapt ("androidx.room:room-compiler:2.6.1")
+        implementation ("androidx.room:room-ktx:2.6.1")
+
+
     implementation ("androidx.core:core-ktx:1.12.0" )
     implementation( "androidx.appcompat:appcompat:1.6.1" )
     implementation ("com.google.android.material:material:1.11.0")
